= 1.0.4 - December 31, 2018 =

* Add auto-update feature